# resoucemanage

./: .gitattributes  .gitignore  README.md
.workflow/: java-maven.yml
code/: .gitignore
code/android/: build.gradle  settings.gradle
code/android/app/: build.gradle  keystore  proguard-rules.pro
code/android/app/src/androidTest/java/com/wu/resource/: ExampleInstrumentedTest.java
code/android/app/src/androidTest/java/com/wu/resourcemanage/: ExampleInstrumentedTest.java
code/android/app/src/main/: AndroidManifest.xml
code/android/app/src/main/assets/: index.html
code/android/app/src/main/res/drawable/: back.xml  like.xml  like_red.xml  mine.xml  nikon.xml  picture.xml  picture_selected.xml  picture_selector.xml  search_edit_normal.xml  search_edit_selector.xml  share_background.xml  share_item_normal.xml  share_item_pressed.xml  share_item_selector.xml  shotdate_tag_normal.xml  stats.xml
code/android/app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_resource_detail.xml  fragment_pic.xml  photo_grid_view.xml  photo_image_view.xml  share_image_view.xml  share_layout.xml
code/android/app/src/main/res/layout/drawable/: close.xml  delete.xml
code/android/app/src/main/res/menu/: bottom_nav_menu.xml
code/android/app/src/main/res/navigation/: mobile_navigation.xml  navagation.xml  search_activity_navigation.xml
code/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
code/android/app/src/main/res/xml/: filepaths.xml
code/android/common/: build.gradle
code/android/compose/: build.gradle
code/android/compose/src/main/: AndroidManifest.xml
code/android/compose/src/main/res/drawable/: back.xml  picture.xml
code/android/compose/src/main/res/values/: themes.xml
code/android/gradle/wrapper/: gradle-wrapper.properties
code/android/sphinxSearch/: build.gradle
code/android/sphinxSearch/src/main/: AndroidManifest.xml
code/android/sphinxSearch/src/main/cpp/: CMakeLists.txt  searchClient.cpp  searchClient.h  sphinxclient.c  sphinxclient.h  sphinxsearch.cpp
code/desktop/: .gitignore  pubspec.yaml
code/desktop/core/: .metadata  README.md  pubspec.yaml
code/desktop/core/lib/: core.dart  core_method_channel.dart  core_platform_interface.dart
code/desktop/core/test/: core_method_channel_test.dart  core_test.dart
code/desktop/core/windows/: CMakeLists.txt  core_plugin.cpp  core_plugin.h  core_plugin_c_api.cpp
code/desktop/core/windows/test/: core_plugin_test.cpp
code/desktop/lib/: main.dart
code/desktop/lib/net/: Http.dart
code/desktop/lib/ui/: navigation.dart  photoPage.dart
code/desktop/windows/: CMakeLists.txt
code/desktop/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
code/desktop/windows/runner/: CMakeLists.txt  flutter_window.cpp  flutter_window.h  main.cpp  win32_window.cpp  win32_window.h
code/fileWatch/: CMakeLists.txt  filewatchTest.c
code/fileWatch/include/: com_wuxinbo_resourcemanage_jni_FileWatch.h
code/fileWatch/linux/: CMakeLists.txt
code/fileWatch/win32/: CMakeLists.txt  fileWatch.cpp
code/ios/resource/resource/: AppConfig.swift  ChartView.swift  ContentView.swift  Persistence.swift  chartEntity.swift  resourceApp.swift
code/ios/resource/resource.xcodeproj/: project.pbxproj
code/ios/resource/resource.xcodeproj/project.xcworkspace/xcuserdata/wuxinbo.xcuserdatad/: UserInterfaceState.xcuserstate
code/ios/resource/resource.xcodeproj/xcuserdata/wuxinbo.xcuserdatad/xcschemes/: xcschememanagement.plist
code/ios/resource/resource/http/: Http.swift
code/ios/resource/resource/photo/: Photo.swift
code/ios/resource/resource/resource.xcdatamodeld/: .xccurrentversion
code/ios/resource/resourceTests/: resourceTests.swift
code/ios/resource/resourceUITests/: resourceUITests.swift  resourceUITestsLaunchTests.swift
code/native/: .gitignore  BUILD  CMakeLists.txt  Device.cpp  WORKSPACE  jniImpl.cpp  jnicommon.cpp  protocol.cpp
code/native/base/: CmakeLists.txt  jnicommon.cpp  logger.cpp  logger.h
code/native/filewatch/: CMakeLists.txt
code/native/filewatch/linux/: CMakeLists.txt  filewatch.c
code/native/filewatch/win32/: fileWatch.cpp
code/native/imageMagick/: CmakeLists.txt  ImageMagick.cpp  imageMagick.h  main.cpp
code/native/imageMagick/MagickCore/: channel.h  magick-baseconfig.h  version.h
code/native/imageMagick/lib/: CORE_RL_MagickWand_.lib
code/native/include/: com_wuxinbo_resourcemanage_jni_FileWatch.h  common.h  resource_manage_ImageMagick.h
code/native/include/jni/: TCPServerAndClient.h  com_wuxinbo_resourcemanage_jni_FileWatch.h  comon.h
code/native/include/net/: common.h  netcommon.h
code/native/include/win32/: common.h
code/native/net/: CmakeLists.txt  client.cpp  client.h  jniImpl.cpp  server.cpp  server.h
code/native/test/: CmakeLists.txt  FileWatchWin32.cpp  magick.cpp  tcpClientTest.cpp
code/qt/: resource.pro  resource.pro.qtds  resource.qrc  resource_zh_CN.ts
code/qt/lib/: event.lib
code/qt/src/: common.h  image.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
code/qt/src/component/: ListView.cpp  ListView.h  leftmenu.cpp  leftmenu.h  plainedit.cpp  plainedit.h
code/qt/src/image/: GridImageLayout.h  gridImageLayout.cpp  imageViewer.cpp  imageViewer.h  imageloadevent.cpp  imageloadevent.h
code/qt/src/include/libevent/event2/: event.h
code/qt/src/network/: TcpServer.cpp  TcpServer.h
code/resourceManage/: pom.xml
code/resourceManage/src/main/java/com/wuxinbo/resourceManage/: ResourceManageApplication.java
code/resourceManage/src/test/java/com/wuxinbo/resourceManage/: ResourceManageApplicationTests.java
code/server/service/: pom.xml  start-server.bat
code/server/service/sql/: init.mwb  init.mwb.bak
code/server/service/src/main/resources/: application.properties
code/sphinxSearch/linux/: CMakeLists.txt
code/sphinxSearch/src/: searchClient.cpp  sphinxclient.c
code/sphinxSearch/win32/sphinxSearch/: SearchClientDll.h  dllmain.cpp  pch.h  sphinxSearch.sln  sphinxSearch.vcxproj  sphinxSearch.vcxproj.filters
code/web/dashboard/: index.html
(+131 files in other folders)
