cmake_minimum_required(VERSION 3.20.0)
set (projectName "filewatch")
project(filewatch)
set(CMAKE_CXX_STANDARD 11)

if (LINUX)
    add_subdirectory(linux)
    include_directories("./include/linux")
    add_library(${projectName} "filewatchTest.c")
endif()
if(WIN32)
    # include_directories(../include ../include/win32 "../include/jni")
    add_library(${projectName} OBJECT "win32/filewatch.cpp"  )
endif()    
